--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'GithubExplorerApp' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'GithubExplorerAppTests' do
     inherit! :complete
     # Pods for testing
