--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
+    "react-native-animatable": "^1.3.3",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
   },
