--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,27 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the action will run.
+name: react-native-android-build-apk
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+    branches:
+      - master
 jobs:
   install-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install yarn
-        run: npm install -g yarn
+      - name: Install npm dependencies
+        run: |
+          npm install
   build-android:
     needs: install-and-test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install  dependencies
-        run: yarn
+      - name: Install npm dependencies
+        run: |
+          npm install
       - name: Build Android Release
-        run: cd android && ./gradlew assembleRelease
+        run: |
+          cd android && ./gradlew assembleRelease
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
